samples/_failures_safe/1761648144_4e9662_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbf4c4d5.c: In function ‘print_token’:
./samples/SAFE/__tmp_dbf4c4d5.c:162:12: error: expected expression at end of input
  162 |            type_names[token.type],
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_dbf4c4d5.c:162:12: error: expected declaration or statement at end of input
